# training-set-classifier-georeset

./: AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  minhash.md  progress.md
samples/: agriculture.filtered.deduped.txt  agriculture.filtered.txt  agriculture.html  agriculture.txt  biodiversity.filtered.deduped.txt  biodiversity.filtered.txt  biodiversity.html  biodiversity.txt  permaculture.filtered.deduped.txt  permaculture.filtered.txt  permaculture.html  permaculture.txt  smoke_test_labels.txt
scripts/: deduplicate.py  extract_text.py  fetch_samples.py  filter_sentences.py  label_sentences.py
src/: config.py  dedup.py  extractor.py  fetcher.py  llm_labeler.py  sentence_filtering.py
tests/: test_dedup.py  test_llm_labeler.py  test_sentence_filtering.py
